--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,13 @@
     <string name="login">ログイン</string>
     <string name="home">さん</string>
     <string name="number">学籍番号：</string>
-    <string name="reserved">次回の予約は、</string>
-    <string name="date_temp">〇〇月〇〇日△時◇◇分</string>
+    <string name="reserved">次回予約</string>
+    <string name="date_temp">データを取得中…</string>
+    <string name="home_reserve">予約</string>
+    <string name="home_list">一覧</string>
+    <string name="home_entry">入室</string>
+    <string name="home_lock">ロック</string>
     <string name="reserve_1">日付を選んでください</string>
-    <string name="desu">です。</string>
 
     <string name="time_reserve_s">開始予定時刻：</string>
     <string name="time_reserve_e">終了予定時刻：</string>
