【activity_main.xml】レイアウトの一部変更。 【各ktファイル】タイトルバーの表示文を各画面のものに変更。 【Quit.kt他】退出完了した予約情報をログ出力する処理の追加。 他、一部コメントの追加や変更。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,58 @@
 <resources>
     <string name="app_name">COMforTABLE</string>
     <string name="title">Co-Reserve</string>
+    <string name="title_t">タイトル</string>
+    <string name="sys_name">ZOOM部屋\nオンライン予約システム</string>
     <string name="login">ログイン</string>
+    <string name="login_t">ログイン画面</string>
+    <string name="home_t">ホーム</string>
     <string name="home">さん</string>
     <string name="number">学籍番号：</string>
     <string name="reserved">次回予約</string>
     <string name="date_temp">データを取得中…</string>
+    <string name="home_entered">入室中</string>
     <string name="home_reserve">予約</string>
     <string name="home_list">一覧</string>
     <string name="home_entry">入室</string>
     <string name="home_lock">ロック</string>
+    <string name="reserve_t1">日付選択</string>
     <string name="reserve_1">日付を選んでください</string>
+    <string name="reserve_t2">時間選択</string>
     <string name="onTime_noReserve">予約はありません。</string>
+    <string name="reserve_t3">最終確認</string>
+    <string name="reserve_t3e">予約情報エラー</string>
+    <string name="reserve_t3u">更新確認</string>
+    <string name="confirm_def">RoomXに〇〇月〇〇日△△時◇◇分で予約します。\nよろしいですか？</string>
     <string name="confirm_roomError">部屋番号が異常です。</string>
     <string name="confirm_resError">予約件数がいっぱいです。\n既に予約している分が完了してから再度お試しください。</string>
-    <string name="commit_ok">予約が完了しました。\n利用開始時間の１５分前から入室できます。</string>
+    <string name="reserve_t4s">予約完了</string>
+    <string name="reserve_t4u">更新完了</string>
+    <string name="commit_ok">予約が完了しました。\n予約した部屋は、開始時間が過ぎてから利用できます。</string>
+    <string name="update_ok">予約を更新しました。\n予約した部屋は、開始時間が過ぎてから利用できます。</string>
+    <string name="reserve_t4e">予約失敗</string>
     <string name="commit_ng">予約時間が重複していたため予約できませんでした。\n申し訳ありません。</string>
+    <string name="list_t">予約一覧</string>
+    <string name="list_def">ここに日時と部屋番号が表示されるよ</string>
+    <string name="update">更新</string>
+    <string name="list_del">取消</string>
+    <string name="reader_t">ＱＲコード読み取り</string>
+    <string name="enter_ta">注意事項</string>
     <string name="attention_wait">しばらくお待ちください…</string>
     <string name="attention_ok">・扉は終了時間の５分後に自動でロックされますが、退室時には利用した方が施錠するようにしてください。\n・利用後は必ずチェックシートを全て埋め、退出処理を済ませてから退出してください。\n・何か不都合がありましたら、進路指導課までご連絡ください。</string>
+    <string name="enter_te">部屋番号エラー</string>
     <string name="attention_error">予約時間か部屋が違います。\n予約一覧から予約情報を再確認してください。</string>
     <string name="next">次へ</string>
     <string name="back">戻る</string>
+    <string name="release_t">ロック解除</string>
     <string name="ok">ok</string>
+    <string name="lock_t">ロック画面</string>
+    <string name="check_t">チェックシート</string>
     <string name="check1">　室内の電源を全てOFFにしましたか？</string>
     <string name="check2">　扉のロックを掛けましたか？</string>
     <string name="check3">　外の張り紙を外しましたか？</string>
     <string name="check4">　PC、マウス等は除菌しましたか？</string>
     <string name="check_back">ボタンに戻る</string>
+    <string name="quit_t">退出完了</string>
     <string name="quit">退出が完了しました。\n部屋を綺麗にご利用いただき、\nありがとうございます。</string>
     <string name="complete">完了</string>
 
